Upgrade to latest spring boot and java 17